tests/errors/ambiguous_directive.dang
# Test that using a conflicting unqualified directive produces an error

import Other
import Test

# Both Test and Other provide @experimental directive
# Using unqualified @experimental should fail
type MyType {
  pub field: String! @experimental
}
